--- a/config.h.in
+++ b/config.h.in
@@ -14,11 +14,17 @@
 /* Define if you have the ether_hostton function.  */
 #undef HAVE_ETHER_HOSTTON
 
+/* Define if you have the snprintf function.  */
+#undef HAVE_SNPRINTF
+
 /* Define if you have the strerror function.  */
 #undef HAVE_STRERROR
 
 /* Define if you have the strlcpy function.  */
 #undef HAVE_STRLCPY
+
+/* Define if you have the vsnprintf function.  */
+#undef HAVE_VSNPRINTF
 
 /* Define if you have the <ifaddrs.h> header file.  */
 #undef HAVE_IFADDRS_H
