--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.100.2.1 2003-12-10 09:32:01 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.100.2.2 2003-12-15 01:42:24 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.100.2.1 $)
+AC_REVISION($Revision: 1.100.2.2 $)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -30,6 +30,15 @@ AC_CHECK_HEADERS(sys/ioccom.h sys/sockio.h ifaddrs.h limits.h netinet/if_ether.h
 AC_LBL_FIXINCLUDES
 
 AC_CHECK_FUNCS(ether_hostton strerror strlcpy)
+
+needsnprintf=no
+LIBOBJS=
+AC_CHECK_FUNCS(vsnprintf snprintf,,
+	[needsnprintf=yes])
+if test $needsnprintf = yes; then
+	LIBOBJS="$LIBOBJS snprintf.o"
+fi
+AC_SUBST(LIBOBJS)
 
 dnl to pacify those who hate protochain insn
 AC_MSG_CHECKING(if --disable-protochain option is specified)
