--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.100.2.3 2004-03-28 21:35:46 fenner Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.100.2.4 2004-03-28 21:43:34 fenner Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,8 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.100.2.3 $)
+AC_REVISION($Revision: 1.100.2.4 $)
+AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
 AC_CANONICAL_SYSTEM
@@ -34,13 +35,11 @@ AC_LBL_FIXINCLUDES
 AC_CHECK_FUNCS(ether_hostton strerror strlcpy)
 
 needsnprintf=no
-LIBOBJS=
 AC_CHECK_FUNCS(vsnprintf snprintf,,
 	[needsnprintf=yes])
 if test $needsnprintf = yes; then
-	LIBOBJS="$LIBOBJS snprintf.o"
+	AC_LIBOBJ(snprintf)
 fi
-AC_SUBST(LIBOBJS)
 
 dnl to pacify those who hate protochain insn
 AC_MSG_CHECKING(if --disable-protochain option is specified)
