If we have ether_hostton(), check whether we have <netinet/if_ether.h> and if including it declares ether_hostton(), and define HAVE_DECL_ETHER_HOSTTON appropriately, and use that to determine whether to define it ourselves, rather than having a set of OSes that don't need it, as that set can change over time.
Make the default declaration of "ether_hostton()" declare its first
argument as "const char *", as that's what it's *supposed* to be
(although it's not declared as such in some OSes, so we still have to
cast a "const char *" when passed as the first argument).

--- a/config.h.in
+++ b/config.h.in
@@ -13,6 +13,10 @@
 /* define if you have the DAG API */
 #undef HAVE_DAG_API
 
+/* Define to 1 if you have the declaration of `ether_hostton', and to 0 if you
+   don't. */
+#undef HAVE_DECL_ETHER_HOSTTON
+
 /* define if you have a /dev/dlpi */
 #undef HAVE_DEV_DLPI
 
