On some platforms, some extra stuff is needed in order to include <netinet/if_ether.h>, so, if we don't find <netinet/if_ether.h>, try adding that extra stuff when looking for it.

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.112 2005-03-26 23:57:42 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.113 2005-03-27 00:30:21 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.112 $)
+AC_REVISION($Revision: 1.113 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -27,8 +27,24 @@ dnl test for it and set "HAVE_SYS_IOCCOM_H" if we have it, otherwise
 dnl "AC_LBL_FIXINCLUDES" won't work on some platforms such as Solaris.
 dnl
 AC_CHECK_HEADERS(sys/ioccom.h sys/sockio.h limits.h)
-AC_CHECK_HEADERS(netinet/if_ether.h, , , [#include <sys/types.h>
-#include <sys/socket.h>])
+AC_CHECK_HEADERS(netinet/if_ether.h,,
+    [
+	#
+	# Do we need to include <net/if.h> first?
+	#
+	AC_CHECK_HEADERS(netinet/if_ether.h,,,
+	    [
+#include <sys/types.h>
+#include <sys/socket.h>
+struct mbuf;
+struct rtentry;
+#include <net/if.h>
+	    ])
+    ],
+    [
+#include <sys/types.h>
+#include <sys/socket.h>
+    ])
 
 AC_LBL_FIXINCLUDES
 
