--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.113 2005-03-27 00:30:21 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.114 2005-03-27 00:57:08 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.113 $)
+AC_REVISION($Revision: 1.114 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -27,11 +27,21 @@ dnl test for it and set "HAVE_SYS_IOCCOM_H" if we have it, otherwise
 dnl "AC_LBL_FIXINCLUDES" won't work on some platforms such as Solaris.
 dnl
 AC_CHECK_HEADERS(sys/ioccom.h sys/sockio.h limits.h)
-AC_CHECK_HEADERS(netinet/if_ether.h,,
+AC_CHECK_HEADERS(netinet/if_ether.h,,,
     [
+#include <sys/types.h>
+#include <sys/socket.h>
+    ])
+if test "$ac_cv_header_netinet_if_ether_h" != yes; then
 	#
+	# The simple test didn't work.
 	# Do we need to include <net/if.h> first?
+	# Unset ac_cv_headeer_netinet_if_ether_h so we don't
+	# tread the previous failure as a cached value and
+	# suppress the next test.
 	#
+	AC_MSG_NOTICE([Rechecking with some additional #includes])
+	unset ac_cv_header_netinet_if_ether_h
 	AC_CHECK_HEADERS(netinet/if_ether.h,,,
 	    [
 #include <sys/types.h>
@@ -40,11 +50,7 @@ struct mbuf;
 struct rtentry;
 #include <net/if.h>
 	    ])
-    ],
-    [
-#include <sys/types.h>
-#include <sys/socket.h>
-    ])
+fi
 
 AC_LBL_FIXINCLUDES
 
