--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.115 2005-03-27 01:07:01 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.116 2005-03-27 01:15:20 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.115 $)
+AC_REVISION($Revision: 1.116 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -41,6 +41,7 @@ if test "$ac_cv_header_netinet_if_ether_h" != yes; then
 	unset ac_cv_header_netinet_if_ether_h
 	AC_CHECK_HEADERS(netinet/if_ether.h, , , [#include <sys/types.h>
 #include <sys/socket.h>
+#include <netinet/in.h>
 struct mbuf;
 struct rtentry;
 #include <net/if.h>])
