--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.116 2005-03-27 01:15:20 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.117 2005-03-27 02:45:03 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.116 $)
+AC_REVISION($Revision: 1.117 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -64,6 +64,17 @@ fi
 #
 AC_LBL_LIBRARY_NET
 
+#
+# You are in a twisty little maze of UN*Xes, all different.
+# Some might not have ether_hostton().
+# Some might have it, but not declare it in any header file.
+# Some might have it, but declare it in <netinet/if_ether.h>.
+# Some might have it, but declare it in <netinet/ether.h>
+# (And some might have it but document it as something declared in
+# <netinet/ethernet.h>, although <netinet/if_ether.h> appears to work.)
+#
+# Before you is a C compiler.
+#
 AC_CHECK_FUNCS(ether_hostton)
 if test "$ac_cv_func_ether_hostton" = yes; then
 	#
@@ -73,12 +84,38 @@ if test "$ac_cv_func_ether_hostton" = yes; then
 		#
 		# Yes.  Does it declare ether_hostton()?
 		#
-		AC_CHECK_DECLS(ether_hostton,,,
+		AC_CHECK_DECLS(ether_hostton,
+		    [
+			AC_DEFINE(NETINET_IF_ETHER_H_DECLARES_ETHER_HOSTTON,,
+			    [Define to 1 if netinet/if_ether.h declares `ether_hostton'])
+		    ],,
 		    [
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/if_ether.h>
 		    ])
+	fi
+	#
+	# Did that succeed?
+	#
+	if test "$ac_cv_have_decl_ether_hostton" != yes; then
+		#
+		# No, how about <netinet/ether.h>, as on Linux?
+		#
+		AC_CHECK_HEADERS(netinet/ether.h)
+		if test "$ac_cv_header_netinet_ether_h" = yes; then
+			#
+			# We have it - does it declare ether_hoston()?
+			#
+			AC_CHECK_DECLS(ether_hostton,
+			    [
+				AC_DEFINE(NETINET_ETHER_H_DECLARES_ETHER_HOSTTON,,
+				    [Define to 1 if netinet/ether.h declares `ether_hostton'])
+			    ],,
+			    [
+#include <netinet/ether.h>
+			    ])
+		fi
 	fi
 fi
 
