--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.120.2.1 2005-04-10 18:04:49 hannes Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.120.2.2 2005-04-19 00:51:38 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.120.2.1 $)
+AC_REVISION($Revision: 1.120.2.2 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -93,6 +93,7 @@ if test "$ac_cv_func_ether_hostton" = yes; then
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
+#include <arpa/inet.h>
 struct mbuf;
 struct rtentry;
 #include <net/if.h>
