Some systems (*cough*Irix*cough) not only don't declare "ether_hostton()" but don't even declare "struct ether_addr"; on those systems, declare "struct ether_addr".

--- a/config.h.in
+++ b/config.h.in
@@ -83,6 +83,9 @@
 /* Define to 1 if you have the `strlcpy' function. */
 #undef HAVE_STRLCPY
 
+/* Define to 1 if the system has the type `struct ether_addr'. */
+#undef HAVE_STRUCT_ETHER_ADDR
+
 /* Define to 1 if you have the <sys/bufmod.h> header file. */
 #undef HAVE_SYS_BUFMOD_H
 
