--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.123 2005-04-20 11:12:36 guy Exp $ (LBL)
+dnl @(#) $Header: /tcpdump/master/libpcap/configure.in,v 1.124 2005-04-23 22:43:15 guy Exp $ (LBL)
 dnl
 dnl Copyright (c) 1994, 1995, 1996, 1997
 dnl	The Regents of the University of California.  All rights reserved.
@@ -6,7 +6,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 dnl
 
-AC_REVISION($Revision: 1.123 $)
+AC_REVISION($Revision: 1.124 $)
 AC_PREREQ(2.50)
 AC_INIT(pcap.c)
 
@@ -84,7 +84,7 @@ if test "$ac_cv_func_ether_hostton" = yes; then
 		#
 		# Yes.  Does it declare ether_hostton()?
 		#
-		AC_CHECK_DECLS(ether_hostton,
+		AC_CHECK_DECL(ether_hostton,
 		    [
 			AC_DEFINE(NETINET_IF_ETHER_H_DECLARES_ETHER_HOSTTON,,
 			    [Define to 1 if netinet/if_ether.h declares `ether_hostton'])
@@ -116,7 +116,7 @@ struct rtentry;
 			# suppress the next test.
 			#
 			unset ac_cv_have_decl_ether_hostton
-			AC_CHECK_DECLS(ether_hostton,
+			AC_CHECK_DECL(ether_hostton,
 			    [
 				AC_DEFINE(NETINET_ETHER_H_DECLARES_ETHER_HOSTTON,,
 				    [Define to 1 if netinet/ether.h declares `ether_hostton'])
@@ -145,6 +145,13 @@ struct rtentry;
 #include <net/if.h>
 #include <netinet/if_ether.h>
 		    ])
+		AC_DEFINE(HAVE_DECL_ETHER_HOSTTON, 0,
+		    [Define to 1 if you have the declaration of `ether_hostton', and to 0 if you
+don't.])
+	else
+		AC_DEFINE(HAVE_DECL_ETHER_HOSTTON, 1,
+		    [Define to 1 if you have the declaration of `ether_hostton', and to 0 if you
+don't.])
 	fi
 fi
 
